made google analytics env variable

--- a/.env.example
+++ b/.env.example
@@ -34,9 +34,11 @@ TEST_DB_USER=
 TEST_DB_PASSWORD=
 
 
-### EMAIL ###
-
+### EMAIL ##
 APPLICATION_ERROR_FROM_EMAIL=
 APPLICATION_FEEDBACK_TO_EMAIL=
 APPLICATION_FEEDBACK_FROM_EMAIL=
 APPLICATION_FEEDBACK_FROM_PWD=
+
+### GOOGLE ANALYTICS ###
+GOOGLE_ANALYTICS=
